# WhatsTux

./: README.md  package-lock.json  package.json
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
