[package]
name = "whatstux"
version = "0.1.0"
description = "WhatsApp Emulator for Linux"
authors = ["you"]
edition = "2021"


[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
